# ScarMapper

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  scarmapper.py  setup.py
.github/workflows/: docker-publish.yml
Indices/: Eurofin_NGS_UDIs.tsv
conda/: meta.yaml
docs/: ScarMapper_Batch.cfg  ScarMapper_Combine.cfg  ScarMapper_IndelProcessing.cfg  ScarMapper_Manifest.tsv  ScarMapper_Targets.tsv  ScarMapper_User_Guide.docx  run_ScarMapper_IndelProcessing.sh  run_ScarMapper_IndelProcessing_batch.sh
resources/: Targets_ScarMapper.tsv
scarmapper/: INDEL_Processing.py  ScarMapperPlot.py  SlidingWindow.pyx  TargetMapper.py  batch.py  cli.py  combine.py  pear.py  setup.py  tools.py
