[build-system]
requires = ["setuptools>=68.0", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ScarMapper"
version = "3.0.0"
description = "Package for mapping repair scars in genomic DNA"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Allan Lui", email = "allan.lui@cruk.cam.ac.uk"},
    {name = "Dennis Simpson", email = "dennis@email.unc.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "scipy>=1.7.0",
    "natsort>=8.0.0",
    "python-magic>=0.4.24",
    "pysam>=0.18.0",
    "pathos>=0.2.8",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "pyfaidx>=0.7.0",
    "Levenshtein>=0.12.2",
]

[project.optional-dependencies]
dev = [
    "Cython>=3.0",
    "pytest",
]

[project.scripts]
scarmapper = "scarmapper.cli:main"

[project.urls]
Homepage = "https://github.com/pkMyt1/ScarMapper"
Issues = "https://github.com/pkMyt1/ScarMapper/issues"

[tool.setuptools.packages.find]
include = ["scarmapper*", "Valkyries*"]

[tool.setuptools.package-data]
scarmapper = ["*.pyx"]
